=======

* **Render:**

  * **Arnold:**

    * **New:** H2A now includes world space motion vector information to the
      file. Although it is not usable in current form, further work needs to be
      done to convert the world space data to camera space data.

* **Pipeline:**

 * **Fix:** Fixed the 'already maximum connection' error by closing the
   database session when the UI is closed.

0.1.3.1
=======

* **Pipeline:**

  * **Env:**

    * **Update:** The external paths are not replaced with relative paths
      anymore. Also the output file name format is following the new naming
      convention.

0.1.3
=====

* **Pipeline:**

  * **Env:**

    * **New:** Moved ``stalker.models.env.EnvironmentBase`` to
      ``anima.pipeline.env.base.EnvironmentBase``.
    * **New:** Added ``stalker.models.env.photoshopEnv.Photoshop`` class for
      Photoshop.

  * **UI:**
  
    * **Version Creator:**

      * **Update:** Version Creator now use ``version.nice_name`` attribute to
        name the new versions.

0.1.2
=====

* **Pipeline:**

 * **UI:**

   * **General:**

     * **New:** Added icons for ZBrush, Photoshop and MudBox.

   * **Version Creator:**

     * **New:** Version creator now supports External environments through
       environmentless mode and added presets for ZBrush, Photoshop and
       Mudbox.

 * **Env:**

   * **ExternalEnv:**

     * **New:** Added ExternalEnv and ExternalEnvFactory classes to handle
       external environments (which doesn't support python by default). For
       now there are three external environments: Photoshop, ZBrush and
       Mudbox.

0.1.1
=====

* **Pipeline:**

  * **UI:**

    * **Version Creator:**

      * **New:** Added "Use Namespace" option to allow importing/referencing to
        root namespace especially important for maya and alembic caches.

      * **Update:** It is not possible to save a version to a container task
        any more.

0.1.0
=====

* **Pipeline:**

  * **Env:**

    * **MayaEnv:**
