@@ -1,6 +1,6 @@
 # -*- coding: utf-8 -*-
 # Copyright (c) 2012-2013, Anima Istanbul
-# 
+#
 # This module is part of anima-tools and is released under the BSD 2
 # License: http://www.opensource.org/licenses/BSD-2-Clause
 """
@@ -9,7 +9,9 @@ This package contains the pipeline tools developed in Anima.
 
 stalker_server_address = 'http://192.168.0.64:6543'
 local_cache_folder = '~/.cache/anima/'
+recent_file_name = 'recent_files'
 
 normal_users_group_names = ['Normal Users']
 power_users_group_names = ['Power Users', 'admins']
+
 
